option java_package = "org.apache.phoenix.coprocessor.generated";
option java_outer_classname = "StatCollectorProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message StatCollectRequest {
  required bytes schemaNameBytes = 1;
  required bytes tableNameBytes = 2;
  optional bytes startRow = 3;
  optional bytes stopRow = 4;
  required string url = 5;
}

message StatCollectResponse {
  required uint64 rowsScanned = 1;
}

service StatCollectService {
  rpc collectStat(StatCollectRequest)
    returns (StatCollectResponse);
}